- replaced ee with most.create - added SumAction (not yet fully working, see test) - added take operator - removed KStreamBase in favor of most.create - using most.merge KTable now has a singular streaming api

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/krystianity/kafka-streams#readme",
   "dependencies": {
+    "@most/create": "~2.0.1",
     "bluebird": "~3.5.0",
     "most": " ~1.2.2",
     "sinek": "~3.2.0"
