- multicast() to the solution

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "kafka-streams",
-  "version": "0.18.0",
+  "version": "0.19.0",
   "description": "kafka-streams for nodejs",
   "main": "index.js",
   "scripts": {
     "word-count": "node ./examples/wordCount.js",
     "obs-test": "mocha test/unit/Observable.test.js",
-    "test": "istanbul cover _mocha -- --recursive -R spec test && istanbul check-coverage --statements 75"
+    "test-unit": "istanbul cover _mocha -- --recursive -R spec test/unit && istanbul check-coverage --statements 60",
+    "test-int": "istanbul cover _mocha -- --recursive -R spec test/int && istanbul check-coverage --statements 70",
+    "test": "npm run test-unit && npm run test-int"
   },
   "repository": {
     "type": "git",
@@ -37,7 +39,7 @@
     "@most/create": "~2.0.1",
     "bluebird": "~3.5.0",
     "most": " ~1.2.2",
-    "sinek": "~3.3.0"
+    "sinek": "~3.4.0"
   },
   "devDependencies": {
     "istanbul": "~0.4.2",
