--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "word-count": "node ./examples/wordCount.js",
     "obs-test": "mocha test/unit/Observable.test.js",
     "test-unit": "istanbul cover _mocha -- --recursive -R spec test/unit",
-    "test-int": "istanbul cover _mocha -- --recursive -R spec test/int && istanbul check-coverage --statements 70",
+    "test-int": "istanbul cover _mocha -- --recursive --timeout 12500 -R spec test/int && istanbul check-coverage --statements 70",
     "test": "npm run test-unit && npm run test-int"
   },
   "repository": {
