--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kafka-streams",
-  "version": "0.22.0",
+  "version": "0.23.0",
   "description": "kafka-streams for nodejs",
   "main": "index.js",
   "scripts": {
@@ -42,13 +42,14 @@
     "bluebird": "~3.5.0",
     "most": " ~1.2.2",
     "most-subject": "^5.3.0",
-    "sinek": "~3.4.0"
+    "sinek": "~3.7.0"
   },
   "devDependencies": {
     "istanbul": "~0.4.2",
     "log4bro": "~2.0.1",
     "mocha": "~3.2.0",
     "proxyquire": "~1.7.11",
-    "uuid": "~3.0.1"
+    "uuid": "~3.0.1",
+    "async": "~2.3.0"
   }
 }
