--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "homepage": "https://github.com/nodefluent/kafka-streams#readme",
   "dependencies": {
     "bluebird": "~3.5.0",
+    "debug": "^3.0.0",
     "most": "~1.5.0",
     "most-subject": "^5.3.0",
     "sinek": "^5.2.0"
