--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
   "homepage": "https://github.com/nodefluent/kafka-streams#readme",
   "dependencies": {
     "bluebird": "~3.5.0",
-    "most": "~1.6.0",
+    "most": "^1.7.0",
     "most-subject": "^5.3.0",
-    "sinek": "^5.4.0"
+    "sinek": "^6.1.1"
   },
   "devDependencies": {
     "async": "~2.5.0",
     "istanbul": "~0.4.2",
-    "jsdoc": "^3.5.3",
+    "jsdoc": "^3.5.4",
     "jsdoc-to-markdown": "~3.0.0",
     "log4bro": "~3.0.0",
     "mocha": "~3.5.0",
