--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: node_js
 node_js:
-  - "8"
+  - "node"
 env:
   global:
   - ZOOKEEPER_PEERS=localhost:2181
   - KAFKA_PEERS=localhost:9092
   - KST_TOPIC=travis
+  - NKST_TOPIC=ntravis
+  - CXX=g++-4.8
+
 before_install:
 - wget http://www.us.apache.org/dist/kafka/0.10.2.0/kafka_2.10-0.10.2.0.tgz -O kafka.tgz
 - mkdir -p kafka && tar xzf kafka.tgz -C kafka --strip-components 1
@@ -18,4 +21,17 @@ before_install:
 - kafka/bin/kafka-topics.sh --create --partitions 1 --replication-factor 1 --topic ks-fourth-travis --zookeeper localhost:2181
 - kafka/bin/kafka-topics.sh --create --partitions 1 --replication-factor 1 --topic ks-output-travis --zookeeper localhost:2181
 - kafka/bin/kafka-topics.sh --create --partitions 3 --replication-factor 1 --topic ks-traffic-travis --zookeeper localhost:2181
+- kafka/bin/kafka-topics.sh --create --partitions 1 --replication-factor 1 --topic ks-input-ntravis --zookeeper localhost:2181
+- kafka/bin/kafka-topics.sh --create --partitions 1 --replication-factor 1 --topic ks-second-ntravis --zookeeper localhost:2181
+- kafka/bin/kafka-topics.sh --create --partitions 1 --replication-factor 1 --topic ks-third-ntravis --zookeeper localhost:2181
+- kafka/bin/kafka-topics.sh --create --partitions 1 --replication-factor 1 --topic ks-fourth-ntravis --zookeeper localhost:2181
+- kafka/bin/kafka-topics.sh --create --partitions 1 --replication-factor 1 --topic ks-output-ntravis --zookeeper localhost:2181
+- kafka/bin/kafka-topics.sh --create --partitions 3 --replication-factor 1 --topic ks-traffic-ntravis --zookeeper localhost:2181
 - sleep 1
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
