--- a/package.json
+++ b/package.json
@@ -43,17 +43,18 @@
   "homepage": "https://github.com/nodefluent/kafka-streams#readme",
   "dependencies": {
     "bluebird": "~3.5.0",
-    "most": "^1.7.0",
+    "debug": "^3.1.0",
+    "most": "^1.7.2",
     "most-subject": "^5.3.0",
-    "sinek": "^6.1.1"
+    "sinek": "^6.2.2"
   },
   "devDependencies": {
     "async": "~2.5.0",
-    "istanbul": "~0.4.2",
-    "jsdoc": "^3.5.4",
+    "istanbul": "~0.4.5",
+    "jsdoc": "^3.5.5",
     "jsdoc-to-markdown": "~3.0.0",
-    "log4bro": "~3.0.0",
-    "mocha": "~3.5.0",
+    "log4bro": "~3.1.1",
+    "mocha": "~4.0.0",
     "proxyquire": "~1.8.0",
     "uuid": "~3.1.0"
   }
