--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "kafka-streams",
   "version": "3.0.0",
-  "description": "kafka-streams for nodejs",
+  "description": "kafka-streams for Node.js",
   "main": "index.js",
   "scripts": {
     "word-count": "node ./examples/wordCount.js",
     "obs-test": "mocha test/unit/Observable.test.js",
     "test-unit": "_mocha --recursive -R spec test/unit",
-    "test-int": "istanbul cover _mocha -- --recursive --timeout 12500 -R spec test/int && istanbul check-coverage --statements 60",
+    "test-int": "istanbul cover _mocha -- --recursive --timeout 12500 --exit -R spec test/int/ && istanbul check-coverage --statements 60",
     "test": "npm run test-unit && npm run test-int",
     "jsdoc": "rm -r ./docs/jsdoc && jsdoc ./lib --recurse -R ./README.md -d ./docs/jsdoc",
     "jsdoc2md": "rm ./docs/doc.md && jsdoc2md -f ./lib/**/*.js -d > ./docs/doc.md",
