--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "debug": "^3.1.0",
     "most": "^1.7.2",
     "most-subject": "^5.3.0",
-    "sinek": "^6.2.2"
+    "sinek": "6.2.2"
   },
   "devDependencies": {
     "async": "~2.6.0",
