--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kafka-streams",
-  "version": "4.4.0",
+  "version": "4.5.0",
   "description": "kafka-streams for Node.js",
   "main": "index.js",
   "scripts": {
@@ -49,9 +49,11 @@
   "dependencies": {
     "bluebird": "~3.5.1",
     "debug": "~3.1.0",
+    "global": "^4.3.2",
     "most": "~1.7.3",
     "most-subject": "~6.0.0",
-    "sinek": "~6.17.0"
+    "npm-check-updates": "^2.14.2",
+    "sinek": "~6.18.0"
   },
   "devDependencies": {
     "async": "~2.6.1",
@@ -60,6 +62,6 @@
     "log4bro": "~3.7.1",
     "mocha": "~5.2.0",
     "proxyquire": "~2.0.1",
-    "uuid": "~3.2.1"
+    "uuid": "~3.3.0"
   }
 }
