--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "kafka-streams",
-    "version": "4.9.0",
+    "version": "4.10.0",
     "description": "kafka-streams for Node.js",
     "typings": "index.d.ts",
     "main": "index.js",
     "scripts": {
         "consumeFromTopic": "node ./examples/consumeFromTopic.js",
         "consumeOneProduceTwo": "node ./examples/consumeOneProduceTwo.js",
+        "consumeOneProduceTwoTopics": "node ./examples/consumeOneProduceTwoTopics.js",
         "fieldSum": "node ./examples/fieldSum.js",
         "mergeTopics": "node ./examples/mergeTopics.js",
         "produceToTopic": "node ./examples/produceToTopic.js",
@@ -61,6 +62,8 @@
         "bluebird": "~3.5.4",
         "debug": "~4.1.1",
         "global": "^4.3.2",
+        "lodash.clone": "^4.5.0",
+        "lodash.clonedeep": "^4.5.0",
         "most": "~1.7.3",
         "most-subject": "~5.3.0",
         "sinek": "~7.29.3"
