--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "kafka-streams",
-    "version": "4.11.0",
+    "version": "4.12.0",
     "description": "kafka-streams for Node.js",
     "typings": "index.d.ts",
     "main": "index.js",
@@ -15,6 +15,7 @@
         "window": "node ./examples/window.js",
         "wordCount": "node ./examples/wordCount.js",
         "word-count": "yarn wordCount",
+        "topicExtractor": "DEBUG=kafka-streams:mph node ./examples/topicExtractor.js",
         "obs-test": "_mocha test/unit/Observable.test.js",
         "test-unit": "_mocha --recursive --exit -R spec test/unit",
         "test-int": "_mocha --recursive --timeout 22500 --exit -R spec test/int",
@@ -59,20 +60,20 @@
     },
     "homepage": "https://github.com/nodefluent/kafka-streams#readme",
     "dependencies": {
-        "bluebird": "~3.5.4",
+        "bluebird": "~3.5.5",
         "debug": "~4.1.1",
-        "global": "^4.3.2",
-        "lodash.clone": "^4.5.0",
-        "lodash.clonedeep": "^4.5.0",
-        "most": "~1.7.3",
-        "most-subject": "~5.3.0",
-        "sinek": "~7.29.3"
+        "global": "~4.4.0",
+        "lodash.clone": "~4.5.0",
+        "lodash.clonedeep": "~4.5.0",
+        "most": "1.7.3",
+        "most-subject": "5.3.0",
+        "sinek": "~7.30.0"
     },
     "devDependencies": {
-        "async": "~2.6.2",
-        "jsdoc": "~3.6.1",
-        "jsdoc-to-markdown": "~4.0.1",
-        "log4bro": "~3.9.0",
+        "async": "~3.1.0",
+        "jsdoc": "~3.6.2",
+        "jsdoc-to-markdown": "~5.0.0",
+        "log4bro": "~3.10.0",
         "mocha": "~6.1.4",
         "proxyquire": "~2.1.0",
         "uuid": "~3.3.2"
