--- a/website/package.json
+++ b/website/package.json
@@ -16,7 +16,8 @@
     "@mdx-js/react": "^1.5.8",
     "clsx": "^1.1.1",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-highlight": "^0.12.0"
   },
   "browserslist": {
     "production": [
