--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
         "lodash.clonedeep": "~4.5.0",
         "most": "1.7.3",
         "most-subject": "5.3.0",
-        "sinek": "~9.0.0"
+        "sinek": "~9.0.0",
+        "uuid": "~3.4.0"
     },
     "devDependencies": {
         "async": "~3.2.0",
@@ -75,7 +76,6 @@
         "jsdoc-to-markdown": "~5.0.3",
         "log4bro": "~3.14.0",
         "mocha": "~7.0.1",
-        "proxyquire": "~2.1.3",
-        "uuid": "~3.4.0"
+        "proxyquire": "~2.1.3"
     }
 }
