fix: Run all tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Start Docker containers for Zookeeper, Kafka and Schema Registry
       run: cd kafka-setup && docker-compose up -d
     - run: sleep 20
-    - run: yarn mocha --exit --timeout 60000 -R spec test/int/*
+    - run: yarn test
