--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,6 @@ jobs:
     - run: npm install -g yarn
     - run: yarn && yarn add --frozen-lockfile node-rdkafka@2.7.4
     - name: Start Docker containers for Zookeeper, Kafka and Schema Registry
-      run: cd kafka-setup && docker-compose up -d
-    - run: sleep 20
+      run: cd kafka-setup && docker-compose up
+    - run: sleep 60
     - run: yarn test
