--- a/package.json
+++ b/package.json
@@ -82,6 +82,20 @@
         "log4bro": "~3.14.0",
         "mocha": "~7.0.1",
         "proxyquire": "~2.1.3",
+        "ts-node": "^8.10.2",
         "typescript": "^3.9.7"
+    },
+    "mocha": {
+        "extension": [
+            "ts",
+            "js"
+        ],
+        "exit": true,
+        "timeout": 32500,
+        "recursive": true,
+        "require": [
+            "ts-node/register",
+            "source-map-support/register"
+        ]
     }
 }
