--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
         "lodash.clonedeep": "~4.5.0",
         "most": "1.7.3",
         "most-subject": "5.3.0",
-        "sinek": "~9.0.0",
+        "sinek": "^10.0.0-alpha.0",
         "uuid": "~3.4.0"
     },
     "devDependencies": {
